# DLL-Downloader

./: .config.example.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLEAN_ARCHITECTURE_EVALUATION.md  LICENSE  README.md  TEST_IMPLEMENTATION_SUMMARY.md  coverage.json  dll-downloader.py  downloader.py  example_dlls.txt  file.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
.qlty/: qlty.toml
dll_downloader/: CLAUDE.md  __init__.py  api.py  bootstrap.py  runtime.py
dll_downloader/application/: __init__.py  errors.py
dll_downloader/application/use_cases/: CLAUDE.md  __init__.py  download_batch.py  download_dll.py
dll_downloader/config/: CLAUDE.md
dll_downloader/domain/: CLAUDE.md  __init__.py  errors.py
dll_downloader/domain/entities/: CLAUDE.md  __init__.py  dll_file.py
dll_downloader/domain/repositories/: CLAUDE.md  __init__.py  dll_repository.py
dll_downloader/domain/services/: CLAUDE.md  __init__.py  download_resolver.py  hash_service.py  http_client.py  security_scanner.py
dll_downloader/infrastructure/: CLAUDE.md  __init__.py  base.py  composition.py  http_session.py
dll_downloader/infrastructure/config/: __init__.py  loader.py  settings.py
dll_downloader/infrastructure/http/: CLAUDE.md  __init__.py  dll_files_resolver.py  html_link_extractor.py  http_client.py  request_headers.py  retry_policy.py  transport.py  user_agents.py
dll_downloader/infrastructure/persistence/: CLAUDE.md  __init__.py  file_repository.py
dll_downloader/infrastructure/services/: CLAUDE.md  __init__.py  virustotal.py
dll_downloader/interfaces/: CLAUDE.md  __init__.py  cli.py  cli_contracts.py  cli_formatters.py  cli_output.py  cli_runner.py
dll_downloader/interfaces/presenters/: __init__.py  download_presenter.py  structured_presenter.py
docs/: ARCHITECTURE.md  CLAUDE.md  GOVERNANCE.md  PUBLIC_API.md  SEPARATION_OF_CONCERNS_RESOLUTION.md  STRUCTURED_OUTPUTS.md
docs/adr/: 001-sessionmixin-for-http-session-management.md  002-layer-dependencies-and-ports.md  003-settings-loading-strategy.md  004-cli-adapters-and-batch-orchestration.md  005-error-taxonomy-and-boundary-handling.md  006-stricter-cli-boundaries-and-typed-test-doubles.md  007-composition-root-factories.md  008-cli-entrypoint-and-session-contracts.md  009-purer-bootstrap-and-cli-compat-boundary.md  010-public-api-enforcement-and-thin-cli-boundary.md  011-public-api-versioning-and-cli-output-boundary.md  012-public-api-freeze-and-merge-base-guardrails.md  013-remove-legacy-compatibility-shims.md  014-lazy-public-wiring-and-explicit-resolver-dependencies.md  015-split-core-api-from-default-runtime-surface.md  README.md
scripts/: check_critical_coverage.py  check_governance_requirements.py  check_module_guardrails.py  check_structural_docs_sync.py
tests/: CLAUDE.md  README.md  __init__.py  conftest.py  test_api.py  test_architecture.py  test_bootstrap.py  test_cli.py  test_cli_contracts.py  test_cli_output.py  test_cli_runner.py  test_dll_files_resolver.py  test_domain_interfaces.py  test_download_presenter.py  test_entities.py  test_http_client.py  test_settings.py  test_use_cases.py  test_virustotal.py
tests/integration/: CLAUDE.md  README.md  TESTING_SUMMARY.md  __init__.py  test_download_flow.py  test_file_repository.py
